--- a/templates/environment.html
+++ b/templates/environment.html
@@ -30,7 +30,7 @@
         </section>
     </div>
     <button class="collapsible">Cameras</button>
-    <div class="wrapper">
+    <div class="wrapper" id="cameras_wrapper">
         <section>
             <label for="name">Camera Name</label>
             <input id="name" autocomplete="off">
